--- a/css/style.css
+++ b/css/style.css
@@ -81,11 +81,14 @@ div.z-pattern-box:nth-child(3) {
 /* TESTIMONIALS SECTION */
 /* ********************************************* */
 
+.testimonials-section {
+  background-color: #fdebf1;
+  padding: 8rem 0 9.6rem 0;
+}
+
 .testimonial-grid {
   gap: 9.6rem;
 }
-
-
 
 .testimonial-card {
   display: flex;
@@ -119,4 +122,71 @@ div.z-pattern-box:nth-child(3) {
 .job-title {
 
   color: #470f23;
+}
+
+/* ********************************************* */
+/* HIGHLIGHTS SECTION */
+/* ********************************************* */
+
+.highlights-section {
+  padding: 4.8rem 0 9.6rem 0;
+}
+
+.highlights-cards {
+  gap: 3rem; 
+  padding-top: 4.8rem;
+}
+
+.highlights-card {
+  display: flex;
+  flex-direction: column;
+  border-radius: 9px;
+  overflow: hidden;
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  transition: all 0.3s ease-in;
+}
+
+.highlights-card:hover {
+  transform: translateY(-8px);
+}
+
+.card-img {
+  width: 100%;
+}
+
+.card-body {
+  padding: 2rem 2rem 0 2rem;
+}
+
+.card-heading {
+  font-size: 1.6rem;
+  padding: 1.8rem 0;
+}
+
+.card-description {
+  font-size: 1.6rem;
+  line-height: 1.05;
+}
+
+.card-link:link,
+.card-link:visited {
+  align-self: center;
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #ed3376;
+  font-weight: 500;
+  padding: 1.8rem 4rem;
+  border: 4px solid #ed3376;
+  border-radius: 9px;
+  margin: 2rem 0;
+  text-transform: uppercase;
+  transition: all 0.3s ease-in;
+  background-color: #fdebf1;
+}
+
+.card-link:hover,
+.card-link:active {
+  color: #d52e6a;
+  border: 4px solid #d52e6a;
+  background-color: #fff;
 }
