--- a/css/general.css
+++ b/css/general.css
@@ -189,7 +189,8 @@ strong {
 }
 
 .heading-secondary {
-  font-size: 3.2rem;
+  font-size: 3.6rem;
+  letter-spacing: -0.5px;
 }
 
 /* ***************************************** */
