--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,38 @@
 /* ********************************************* */
+/* HEADER */
+/* ********************************************* */
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.8rem 3.2rem;
+  background-color: #fdebf1;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 1.8rem;
+  font-size: 1.8rem;
+  align-items: center;
+}
+
+.nav-link:link,
+.nav-link:visited {
+  text-decoration: none;
+  display: block;
+  padding: 1.2rem;
+  color: inherit;
+  font-weight: 500;
+  transition: all 0.3s ease-in;
+}
+
+.nav-link:hover,
+.nav-link:active {
+  color: #ed3376;
+}
+/* ********************************************* */
 /* HERO SECTION */
 /* ********************************************* */
 
@@ -6,7 +40,6 @@
   background-color: #fdebf1;
   padding: 4.8rem 0 9.6rem 0;
 }
-
 
 .hero {
   max-width: 114rem;
