--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,17 @@
   background-color: #fdebf1;
 }
 
+/* make logo in header a little bit bigger */
+.header .logo{
+  font-size: 5.2rem;
+}
+
 .nav-links {
   list-style: none;
   display: flex;
   gap: 1.8rem;
   font-size: 1.8rem;
+  font-weight: 500;
   align-items: center;
 }
 
@@ -24,7 +30,6 @@
   display: block;
   padding: 1.2rem;
   color: inherit;
-  font-weight: 500;
   transition: all 0.3s ease-in;
 }
 
@@ -34,31 +39,26 @@
 }
 
 /* MOBILE NAVIGATION */
-.nav-mobile-open .nav-mobile {
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  font-size: 4.8rem;
+  color: #333;
   display: none;
 }
 
-.nav-mobile ul {
-  list-style: none;
-}
-
-.nav-mobile ul li {
-  font-size: 4rem;
-}
-
-.nav-mobile-button:link,
-.nav-mobile-button:visited {
-  text-decoration: none;
+.btn-mobile-nav a:link,
+.btn-mobile-nav a:visited {
   color: inherit;
-  transition: all 0.3s ease-in;
+  transition: 0.3s all ease;
 }
 
-.nav-mobile-button:hover,
-.nav-mobile-button:active {
+.btn-mobile-nav a:hover,
+.btn-mobile-nav a:active {
   color: #ed3376;
 }
 
-/* hide close button */
 .nav-close-button {
   display: none;
 }
