--- a/css/queries.css
+++ b/css/queries.css
@@ -17,6 +17,7 @@
   }
 }
 
+
 /* ***************************************** */
 /* QUERIES FOR 912px */
 /* ***************************************** */
@@ -48,9 +49,10 @@
 
   /* nav-open will be toggled through js */
   .nav-open .main-nav{
-    opacity: 1;
+    opacity: 95%;
     pointer-events: auto;
     visibility: visible;
+    transform: translateX(0);
   }
 
   /* show close button */
@@ -69,4 +71,45 @@
     gap: 4.8rem;
     font-size: 3rem;
   }
+
+  .hero {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }  
+
+  .hero-img {
+    width: 80%;
+  }
+
+  .button-container {
+    justify-content: center;
+  }
+
+  .grid--3-cols {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .testimonial-card:nth-child(3) {
+    grid-column: 1 / -1;
+    margin: 0 17rem;
+  }
+
+  .highlights-card:nth-child(3) {
+    grid-column: 1 / -1;
+    /* make third card the same size as the others */
+    margin: 0 17rem;
+  }
+
+  .grid-footer {
+    grid-template-columns: 1fr 1fr;
+    gap: 6.4rem;
+  }
+
 } 
+
+/* ***************************************** */
+/* QUERIES FOR 704px */
+/* ***************************************** */
+@media(max-width: 44em) {
+
+}
