--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
   padding: 1.8rem 3.2rem;
   background-color: #fdebf1;
   position: relative;
+  height: 8.5rem;
 }
 
 /* make logo in header a little bit bigger */
@@ -63,6 +64,21 @@
 .nav-close-button {
   display: none;
 }
+
+.sticky-nav {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  background-color: rgba(255,255,255, 0.95);
+  z-index: 999;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.06);
+}
+
+/* STICKY NAVIGATION */
 
 /* ********************************************* */
 /* HERO SECTION */
